add new website from server na

--- a/xem-phim-bo/thach-ma-dam-yeu/index.html
+++ b/xem-phim-bo/thach-ma-dam-yeu/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1669,28 +1669,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1703,6 +1681,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1726,18 +1726,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tik-tak-anh-yeu-em" title="Tik Tak Anh Yêu Em">
+          <a class="list-top-movie-link" href="/phim-moi/ba-buoc-len-thien-dang" title="Ba Bước Lên Thiên Đàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tik-tak-anh-yeu-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-buoc-len-thien-dang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tik Tak Anh Yêu Em
+             Ba Bước Lên Thiên Đàng
             </span>
             <span class="list-top-movie-item-en">
-             Tik Tak I Love You
+             Three Steps Above Heaven
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-mo-nhan-long-quan-hai-hon-hau" title="Thủ Mộ Nhân: Long Quan Hải Hôn Hầu">
+          <a class="list-top-movie-link" href="/phim-moi/crypto-boy" title="Crypto Boy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-mo-nhan-long-quan-hai-hon-hau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/crypto-boy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thủ Mộ Nhân: Long Quan Hải Hôn Hầu
+             Crypto Boy
             </span>
             <span class="list-top-movie-item-en">
-             Tormenting Love Story: Hidden Love
+             Crypto Boy
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1770,65 +1770,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nghich-tap-chi-tinh-do-thoi-xan" title="Nghịch Tập Chi Tinh Đồ Thôi Xán">
+          <a class="list-top-movie-link" href="/phim-moi/khong" title="Không">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nghich-tap-chi-tinh-do-thoi-xan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nghịch Tập Chi Tinh Đồ Thôi Xán
+             Không
             </span>
             <span class="list-top-movie-item-en">
-             The Way To Be Shinning Star
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-van-phong-phan-2" title="Chuyện Văn Phòng (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-van-phong-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện Văn Phòng (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             The Office (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-doi-1" title="Người dơi 1">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-doi-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người dơi 1
-            </span>
-            <span class="list-top-movie-item-en">
-             Batman
+             No
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/12-con-khi-phan-3" title="12 Con Khỉ (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/12-con-khi-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             12 Con Khỉ (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             12 Monkeys (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/noah-dai-hong-thuy" title="Noah: Đại hồng thủy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noah-ai-hong-thuy-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Noah: Đại hồng thủy
+            </span>
+            <span class="list-top-movie-item-en">
+             Noah
+            </span>
+            <span class="list-top-movie-item-view">
+             7 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
