add new website from server na

--- a/xem-phim-moi/furiosa-cau-chuyen-tu-max-dien/index.html
+++ b/xem-phim-moi/furiosa-cau-chuyen-tu-max-dien/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1793,21 +1793,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-sat-o-my-lai" title="Thảm Sát Ở Mỹ Lai">
+          <a class="list-top-movie-link" href="/phim-moi/choi-thi-chiu" title="CHƠI THÌ CHỊU">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-sat-o-my-lai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/choi-thi-chiu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thảm Sát Ở Mỹ Lai
+             CHƠI THÌ CHỊU
             </span>
             <span class="list-top-movie-item-en">
-             My Lai Four: Soldati senza onore
+             Choi Thi Chiu
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1815,18 +1815,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-tuyet-hon-bay" title="Đêm tuyết hồn bay">
+          <a class="list-top-movie-link" href="/phim-moi/ngoc-lau-xuan" title="Ngọc Lâu Xuân">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-tuyet-hon-bay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoc-lau-xuan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm tuyết hồn bay
+             Ngọc Lâu Xuân
             </span>
             <span class="list-top-movie-item-en">
-             Snow Fight
+             Song of Youth
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1837,21 +1837,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/den-tu-abyss" title="Đến Từ Abyss">
+          <a class="list-top-movie-link" href="/phim-moi/na-tra-hang-yeu-ky" title="Na Tra Hàng Yêu Ký">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/den-tu-abyss-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/na-tra-hang-yeu-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đến Từ Abyss
+             Na Tra Hàng Yêu Ký
             </span>
             <span class="list-top-movie-item-en">
-             メイドインアビス
+             Legend Of Nezha
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1859,18 +1859,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-be-co-don-nhat-the-gioi" title="Cậu Bé Cô Đơn Nhất Thế Giới">
+          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-cua-angela" title="Giáng sinh của Angela">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-co-don-nhat-the-gioi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-cua-angela-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cậu Bé Cô Đơn Nhất Thế Giới
+             Giáng sinh của Angela
             </span>
             <span class="list-top-movie-item-en">
-             The Loneliest Boy in the World
+             Angela's Christmas
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1881,18 +1881,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/smoke-mirrors" title="Smoke &amp; Mirrors">
+          <a class="list-top-movie-link" href="/phim-moi/yu-gi-oh-vrains" title="Yu-Gi-Oh! VRAINS">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/smoke-and-mirrors-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yu-gi-oh-vrains-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Smoke &amp; Mirrors
+             Yu-Gi-Oh! VRAINS
             </span>
             <span class="list-top-movie-item-en">
-             Smoke &amp; Mirrors
+             Yu-Gi-Oh! VRAINS
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
