add new website from server na

--- a/xem-phim-moi/furiosa-cau-chuyen-tu-max-dien/index.html
+++ b/xem-phim-moi/furiosa-cau-chuyen-tu-max-dien/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1793,21 +1793,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/choi-thi-chiu" title="CHƠI THÌ CHỊU">
+          <a class="list-top-movie-link" href="/phim-moi/tau-thoat-2" title="Tẩu Thoát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/choi-thi-chiu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tau-thoat-2024-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             CHƠI THÌ CHỊU
+             Tẩu Thoát
             </span>
             <span class="list-top-movie-item-en">
-             Choi Thi Chiu
+             Escape
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             8 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1815,62 +1815,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoc-lau-xuan" title="Ngọc Lâu Xuân">
-           <span class="status">
-            HD Vietsub + Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoc-lau-xuan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngọc Lâu Xuân
-            </span>
-            <span class="list-top-movie-item-en">
-             Song of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/na-tra-hang-yeu-ky" title="Na Tra Hàng Yêu Ký">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/na-tra-hang-yeu-ky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Na Tra Hàng Yêu Ký
-            </span>
-            <span class="list-top-movie-item-en">
-             Legend Of Nezha
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-cua-angela" title="Giáng sinh của Angela">
+          <a class="list-top-movie-link" href="/phim-moi/bang-coc-ngay-den-toi" title="Băng Cốc Ngày Đen Tối">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-cua-angela-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-coc-ngay-den-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giáng sinh của Angela
+             Băng Cốc Ngày Đen Tối
             </span>
             <span class="list-top-movie-item-en">
-             Angela's Christmas
+             Bangkok Dark Tales
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1881,18 +1837,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yu-gi-oh-vrains" title="Yu-Gi-Oh! VRAINS">
+          <a class="list-top-movie-link" href="/phim-moi/dave-chappelle-sticks-stones" title="Dave Chappelle: Sticks &amp; Stones">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yu-gi-oh-vrains-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dave-chappelle-sticks-and-stones-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yu-Gi-Oh! VRAINS
+             Dave Chappelle: Sticks &amp; Stones
             </span>
             <span class="list-top-movie-item-en">
-             Yu-Gi-Oh! VRAINS
+             Dave Chappelle: Sticks &amp; Stones
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-dissident" title="The Dissident">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-dissident-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             The Dissident
+            </span>
+            <span class="list-top-movie-item-en">
+             The Dissident
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phong-van-2" title="Phong Vân 2">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-van-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phong Vân 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Wind And Cloud
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
