add new website from server na

--- a/xem-phim-bo/nguyet-thuong-trieu-nhan/index.html
+++ b/xem-phim-bo/nguyet-thuong-trieu-nhan/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ven-man-su-that-phan-2" title="Vén Màn Sự Thật (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/loi-sam-hoi-muon-mang-ii" title="Lời Sám Hối Muộn Màng II">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ven-man-su-that-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-sam-hoi-muon-mang-ii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vén Màn Sự Thật (Phần 2)
+             Lời Sám Hối Muộn Màng II
             </span>
             <span class="list-top-movie-item-en">
-             Truth Be Told (Season 2)
+             Lời Sám Hối Muộn Màng II
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1681,18 +1681,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/so-canh-sat-paradise-phan-2" title="Sở cảnh sát Paradise (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-phu-nu-huyen-thoai-ii" title="Người phụ nữ huyền thoại II">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/so-canh-sat-paradise-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-phu-nu-huyen-thoai-ii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sở cảnh sát Paradise (Phần 2)
+             Người phụ nữ huyền thoại II
             </span>
             <span class="list-top-movie-item-en">
-             Paradise PD (Season 2)
+             Legendary Woman II
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-7" title="Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 7)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-tranh-giua-cac-vi-sao-cuoc-chien-vo-tinh-phan-7-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chiến Tranh Giữa Các Vì Sao: Cuộc Chiến Vô Tính (Phần 7)
+            </span>
+            <span class="list-top-movie-item-en">
+             Star Wars: The Clone Wars (Season 7)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1703,18 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-ngoai-toc-phan-7" title="Người ngoại tộc (Phần 7)">
+          <a class="list-top-movie-link" href="/phim-moi/tharntype-the-series-1-tu-ghet-toi-yeu" title="TharnType The Series 1: Từ Ghét Tới Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ngoai-toc-phan-7-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tharntype-the-series-1-tu-ghet-toi-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người ngoại tộc (Phần 7)
+             TharnType The Series 1: Từ Ghét Tới Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Outlander (Season 7)
+             TharnType 1
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,43 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-hat-trung-hoc-2" title="Đội Hát Trung Học 2">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi-dac-vu" title="Trò Chơi Đặc Vụ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-hat-trung-hoc-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-dac-vu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội Hát Trung Học 2
+             Trò Chơi Đặc Vụ
             </span>
             <span class="list-top-movie-item-en">
-             Glee - Season 2
+             Agent Game
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-thach-than-tuong" title="Thử Thách Thần Tượng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-thach-than-tuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thử Thách Thần Tượng
-            </span>
-            <span class="list-top-movie-item-en">
-             RUNNING MAN
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             10 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
